# cmake_tools

./: .gitignore  CMakeLists.txt  _clang-format  notes.md
app/: CMakeLists.txt
app/src/: main.cpp
lib_a/: CMakeLists.txt
lib_a/include/: a_lib.h
lib_a/src/: a_lib.cpp
lib_a/tests/: CMakeLists.txt  test_liba_dangerous.cpp  test_liba_main.cpp  test_liba_suite1.cpp  test_liba_suite2.cpp
lib_b/: CMakeLists.txt  b_lib.h
lib_b/src/: b_lib.cpp
lib_c/: CMakeLists.txt  c_lib.h
lib_c/src/: c_lib.cpp
lib_c/sub_lib_one/: CMakeLists.txt  one_lib.h
lib_c/sub_lib_one/src/: one_lib.cpp
lib_c/sub_lib_two/: CMakeLists.txt  two_lib.cpp  two_lib.h
lib_pch/: CMakeLists.txt
lib_pch/include/: pch_lib.h
lib_pch/src/: pch_header.cpp  pch_lib.cpp
test/: CMakeLists.txt  test_main.cpp  test_suite1.cpp
test_runner/: CMakeLists.txt  test_main.cpp
